New files added - [variables.less,style.css,theme.png,glyphicons-halflings-regular.woff2,.wmproject.properties,glyphicons-halflings-regular.eot,style.less,config.json,glyphicons-halflings-regular.ttf,glyphicons-halflings-regular.woff,glyphicons-halflings-regular.svg,gray-orange] Files modified - [Main.variables.json,index.html,eshopping.properties,.wmproject.properties,page.min.html,wmProperties.js,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - [sourcesanspro-regular.ttf,glyphicons-halflings-regular.woff,variables.less,style.less,sourcesanspro-regular.eot,.wmproject.properties,glyphicons-halflings-regular.eot,theme.png,sourcesanspro-regular.woff2,sourcesanspro-regular.woff,eshopping.log,glyphicons-halflings-regular.svg,glyphicons-halflings-regular.woff2,style.css,glyphicons-halflings-regular.ttf,sourcesanspro-regular.svg]

--- a/.wmproject.properties
+++ b/.wmproject.properties
@@ -15,6 +15,6 @@
 <entry key="icon">default.png</entry>
 <entry key="projectShellName">WaveKart_PS</entry>
 <entry key="displayName">usingWaveKArtPS</entry>
-<entry key="activeTheme">cool-blue</entry>
+<entry key="activeTheme">gray-orange</entry>
 <entry key="description"/>
 </properties>
